Fix footer linkedin icon alignment

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -38,6 +38,10 @@
     justify-content: flex-start;
 }
 
+.linkedIn {
+    margin-bottom: 5px;
+}
+
 .mailIcon path {
     fill: none;
     stroke: var(--theme-page-text);;
